--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <header>
+        <a href="custom_agents.html" class="button">Create Custom Agents</a>
+    </header>
     <main>
         <div class="container">
             <nav class="navbar">
