--- a/templates/custom_agents.html
+++ b/templates/custom_agents.html
@@ -19,6 +19,8 @@
             </ul>
             <button id="newAgent">Make a New Agent</button>
             <button id="newWorkflow">Make New Workflow</button>
+            <img src="../static/images/Agent1.png" alt="Agent 1" class="agent-image">
+            <img src="../static/images/Agent2.png" alt="Agent 2" class="agent-image">
         </aside>
         <main class="main-container">
             <section class="custom-agent-creation">
