--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <a href="custom_agents.html" class="button">Create Custom Agents</a>
+        <img src="../static/images/roboFace.png" alt="Coder Logo" class="header-logo">
     </header>
     <main>
         <div class="container">
